[profile.release]
opt-level = "z"     
lto = true          
codegen-units = 1   
strip = "debuginfo"  
panic = "abort"      

[package]
name = "loki"
version = "0.1.0"
edition = "2024"

[dependencies]
tun-rs = "2"
x25519-dalek = "2"
chacha20poly1305 = "0.10"
dashmap = "5"
signal-hook = "0.4.1"
clap = { version = "4", features = ["derive"] }